# kombat

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: __init__.py
src/kombat/crawlers/: system_crawler.py
src/kombat/services/: analysis_service.py  csv_service.py  html_service.py  json_service.py
src/kombat/services/resources/css/: html_tree_style.css
src/kombat/services/resources/html/: html_tree_template.html
src/kombat/services/resources/js/: html_tree_logic.js
src/kombat/structures/: hierarchy.py
tests/crawlers/: test_system_crawler.py
