[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kombat"
version = "0.1.0"
authors = [
    { name = "Jovan Vunic", email = "your.email@example.com" },
]
description = "A Python library for crawling and analyzing file system hierarchies"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/vunicjovan/kombat"
"Bug Tracker" = "https://github.com/vunicjovan/kombat/issues"
